--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,109 @@ section{
     padding-top: 1%;
 }
 
+#logos {
+    width: 40% !important;
+    margin-left: -55% !important;
+    margin-top: 1%;
+}
+
+#firstText-corpo {
+    margin-left: -62%;
+    font-size: 42px;
+    color: white;
+    font-weight: 900;
+    margin-top: 1%;
+}
+
+#secondText-corpo {
+    margin-left: -56%;
+    font-size: 26px;
+    margin-top: -4%;
+    color: white;
+}
+
+#descricao{
+    margin-left: -65%;
+    color: white;
+    font-size: 16px;
+}
+
+#indio{
+    width: 14% !important;
+    margin-left: -65% !important;
+    margin-top: -2%;
+}
+
+#dateTime{
+    margin-left: -48%;
+    margin-top: -6%;
+    color: white;
+    font-size: 20px;
+}
+
+#aguia{
+    width: 11% !important;
+    margin-left: -28% !important;
+    margin-top: -12%;
+}
+
+#alert{
+    margin-left: -47%;
+    color: white;
+    background-color: #ed3c36;
+    width: 13%;
+    text-align: center;
+    font-weight: bold;
+}
+
+#nomeTimeUm{
+    margin-left: -63%;
+    margin-top: -3%;
+    color: white;
+    font-weight: 600;
+}
+
+#nomeTimeDois{
+    margin-left: -28%;
+    margin-top: -7%;
+    color: white;
+    font-weight: 600;
+}
+
+#alertDois{
+    margin-left: -47%;
+    color: #ed3c36;
+    /* background-color: #ed3c36; */
+    width: 13%;
+    text-align: center;
+    font-weight: bold;
+    margin-top: -10%;
+    font-size: 29px;
+}
+
+#propaganda {
+    margin-left: -56%;
+    background-color: #fdc220;
+    width: 27%;
+    text-align: center;
+    color: black;
+    height: 30px;
+    font-size: 20px;
+    border-radius: 4px;
+}
+
+#inform{
+    margin-top: -2%;
+    margin-left: -55%;
+    color: white;
+    font-size: 12px;
+}
+
+#ex{
+    color: black !important;
+    margin-left: 0% !important;
+}
+
 
  
 
